# BreakoutGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Game.cpp  Game.h  GameConstants.h  GameConstants.h.gch  GameHelpers.h  GameManager.h  README.md  main.cpp  main.exe.local  phase1_main.cpp
docs/: Group 3 Project Design.docx  Group 3 Test Plan.docx  Group3_Final_Report.docx  Group3_Phase1_Source_Code_Report_Breakout-2.docx  Group3_Phase1_Source_Code_Report_Breakout.docx  Group3_Phase1_Source_Code_Report_Template_Breakout.docx  Group3_Phase2_Source_Code_Repoort_Breakout.docx  Group3_Phase2_Source_Code_Report_Breakout.docx  Group_3_UserGuide.docx  Project Plan.docx  development.md
docs/00_master/: Project_Blueprint.md
docs/01_features/: FS-01_Game-Window_and_Main_Loop.md  FS-02_Paddle_Input_and_Movement.md  FS-03_Ball_Motion_and_Boundary_Collision.md  FS-04_Brick_Grid_and_Brick_State.md  FS-05_Collision_System.md  FS-06_Score_Lives_and_End_States.md  FS-07_Start_Menu_Restart_and_Game_Flow.md  FS-08_HUD_Visual_Feedback_and_Presentation.md  FS-09_Audio_and_Optional_Enhancements.md  FS-10_Build_Setup_Tooling_and_Repository_Workflow.md  FS-11_Testing_and_Quality_Assurance.md  FS-12_User_Guide_Assets_and_Documentation_Support.md  Feature_Spec_Index.md  Future_Features_List.md
docs/01_features/EPIC-1_Core_Gameplay/: 2026-04-09_SITREP.md  FS-01_Game-Window_and_Main_Loop.md  FS-02_Paddle_Input_and_Movement.md  FS-03_Ball_Motion_and_Boundary_Collision.md  FS-04_Brick_Grid_and_Brick_State.md  FS-05_Collision_System.md  FS-06_Score_Lives_and_End_States.md  FS-07_Start_Menu_Restart_and_Game_Flow.md  FS-08_HUD_Visual_Feedback_and_Presentation.md  FS-09_Audio_and_Optional_Enhancements.md  FS-10_Build_Setup_Tooling_and_Repository_Workflow.md  FS-11_Testing_and_Quality_Assurance.md  FS-12_User_Guide_Assets_and_Documentation_Support.md  Feature_Spec_Index.md
docs/02_management/: Phase1_Source_Summary.md  Phase1_Test_Checklist.md
scripts/: Resolve-Toolchain.ps1  build-phase1.ps1  build-phase1.sh  build-tests.ps1  run-game.ps1
src/: Block.cpp  Block.h  Block.h.gch  Collision2D.h  GameManager.cpp  GameManager.h  Level.h  PhysicsManager.h  main.cpp
tests/: Collision2DTests.cpp  GameHelpersTests.cpp  GameManagerTests.cpp  PhysicsManagerTests.cpp  TestHarness.h  TestMain.cpp
